@@ -10,3 +10,6 @@ libMakk_M4_la_LIBADD = $(top_builddir)/common/dsplib/libdsplib.la
 install-data-hook:
 	$(RM) $(DESTDIR)$(plugindir)/$(plugin_LTLIBRARIES)
 	mv $(DESTDIR)$(plugindir)/libMakk_M4.so $(DESTDIR)$(plugindir)/Makk_M4.so
+
+preset_DATA = Makk_M4.prs
+
